2019-08-12  Eric Botcazou  <ebotcazou@adacore.com>

	* exp_ch4.adb (Discrete_Range_Check): Return if checks are
	suppressed.

2019-08-12  Eric Botcazou  <ebotcazou@adacore.com>

	* sem_res.adb: Add with & use clause for Sem_Mech and
	alphabetize.
	(Resolve_Actuals): Do not apply a scalar range check for the
	source of a conversion whose result is passed by reference to a
	valued procedure.

2019-08-12  Eric Botcazou  <ebotcazou@adacore.com>

	* checks.adb (Insert_Valid_Check): Reset the Do_Range_Check flag
	on the validated object.
	* exp_ch6.adb (Add_Call_By_Copy_Code): Reset the Do_Range_Check
	flag on the actual here, as well as on the Expression if the
	actual is a N_Type_Conversion node.
	(Add_Validation_Call_By_Copy_Code): Generate the incoming range
	check if needed and reset the Do_Range_Check flag on the
	Expression if the actual is a N_Type_Conversion node.
	(Expand_Actuals): Do not reset the Do_Range_Check flag here.
	Generate the incoming range check for In parameters here instead
	of...
	(Expand_Call_Helper): ...here.  Remove redudant condition.
	* sem_res.adb (Resolve_Actuals): Use local variable A_Typ and
	remove obsolete comments.
	(Resolve_Type_Conversion): Do not force the Do_Range_Check flag
	on the operand if range checks are suppressed.

2019-08-12  Eric Botcazou  <ebotcazou@adacore.com>

	* checks.adb (Activate_Range_Check): Remove redundant argument.
	(Generate_Range_Check): Likewise.
	(Apply_Float_Conversion_Check): Reset the Do_Range_Check flag on
	entry and remove redundant condition.

2019-08-02  Alexandre Oliva  <oliva@adacore.com>

	* libgnat/a-exexpr.adb (Begin_Handler_v1, End_Handler_v1): New.
	(Claimed_Cleanup): New.
	(Begin_Handler, End_Handler): Document.
	* gcc-interface/trans.c (gigi): Switch to exception handler
	ABI #1.
	(Exception_Handler_to_gnu_gcc): Save the original cleanup
	returned by begin handler, pass it to end handler, and use
	EH_ELSE_EXPR to pass a propagating exception to end handler.